# pocket-veto

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/setup-android/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  AGENTS.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/pocketveto/: PocketVetoApplication.kt
android/app/src/main/kotlin/io/pocketveto/data/: AgentRegistry.kt  FrameCodec.kt  Protocol.kt
android/app/src/main/kotlin/io/pocketveto/service/: BluetoothService.kt  DecisionReceiver.kt  NotifFactory.kt
android/app/src/main/kotlin/io/pocketveto/ui/: AgentCardComposable.kt  ApprovalCardComposable.kt  DashboardActivity.kt  PairingActivity.kt
android/app/src/main/kotlin/io/pocketveto/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/kotlin/io/pocketveto/util/: Permissions.kt  Reconnect.kt
android/app/src/main/res/drawable/: ic_veto.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/test/kotlin/io/pocketveto/data/: FrameCodecTest.kt  ProtocolSerializationTest.kt
crates/pocket-veto/: AGENTS.md  Cargo.toml
crates/pocket-veto-bt/: AGENTS.md  Cargo.toml
crates/pocket-veto-bt/src/: bridge.rs  frame.rs  lib.rs  linux.rs  macos.rs  mock.rs  windows.rs
crates/pocket-veto-bt/tests/: framing_round_trip.rs
crates/pocket-veto-core/: AGENTS.md  Cargo.toml
crates/pocket-veto-core/src/: approvals.rs  config.rs  db.rs  error.rs  events.rs  lib.rs  normalize.rs  output.rs  protocol.rs
crates/pocket-veto/src/: cli.rs  hook.rs  init.rs  lib.rs  main.rs  serve.rs
crates/pocket-veto/tests/: common.rs  hook_subcommand.rs  init_subcommand.rs  m1_vertical_slice.rs  progress_streaming.rs  serve_api.rs
docs/: architecture.md  devcontainer.md  setup.md  troubleshooting.md
